@@ -1,11 +1,9 @@
 package ru.kata.spring.boot_security.demo.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Bean;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -16,83 +14,104 @@ import ru.kata.spring.boot_security.demo.models.User;
 import ru.kata.spring.boot_security.demo.repository.UserRepository;
 
 import javax.annotation.PostConstruct;
-import javax.persistence.EntityManager;
-import javax.persistence.PersistenceContext;
-import javax.persistence.Query;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
+
 @Service
-@Transactional(readOnly = true)
-public class UserServiceImpl implements UserService{
-    private final PasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
-    private final UserRepository userRepository;
-    @Autowired
-    public UserServiceImpl(UserRepository userRepository) {
-        this.userRepository = userRepository;
-    }
+public class UserServiceImpl implements UserService {
 
-    public User findByUsername (String username) {
-        return  userRepository.findByUsername(username);
-    }
+ private final UserRepository userRepository;
+ private final PasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
 
-    @Override
-    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByUsername(username);
-        if (user == null) {
-            throw new UsernameNotFoundException(String.format("Пользователя с именем '%s' не существует",username));
-        }
-        return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(),
-                mapRolesToAuthorities(user.getRoles()));
-    }
+ @Autowired
+ public UserServiceImpl(UserRepository userRepository) {
+  this.userRepository = userRepository;
+ }
 
-    private Collection<? extends GrantedAuthority> mapRolesToAuthorities(Collection<Role> roles) {
-        return roles.stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList());
-    }
+ public List<User> getAllUsers() {
+  return userRepository.findAll();
+ }
 
-    @Transactional
-    public void saveUser (User user) {
-        user.setUsername(user.getUsername());
-        user.setSurname(user.getSurname());
-        user.setEmail(user.getEmail());
-        user.setPassword(passwordEncoder.encode(user.getPassword()));
-        user.setRoles(Collections.singleton(new Role(user.getId(), "ROLE_USER")));
-        userRepository.save(user);
-    }
+ @Transactional
+ public User saveUser(User user, String role) {
+  User newUser = new User();
+  Set<Role> roles;
+  if (role.equals("ROLE_ADMIN")) {
+   roles = Set.of(new Role(user.getId(), "ROLE_USER"), new Role(user.getId(), "ROLE_ADMIN"));
+  } else {
+   roles = Set.of(new Role(user.getId(), "ROLE_USER"));
+  }
+  newUser.setRoles(roles);
+  newUser.setName(user.getName());
+  newUser.setLastName(user.getLastName());
+  newUser.setAge(user.getAge());
+  newUser.setPassword(user.getPassword());
+  newUser.setRoles(roles);
+  newUser.setId(user.getId());
+  newUser.setPassword(passwordEncoder.encode(user.getPassword()));
+  return userRepository.save(newUser);
+ }
 
-    public List<User> allUsers() {
-        return userRepository.findAll();
-    }
-    @Transactional
-    public void update (long id,User upUser) {
-        User updateUser = show(id);
-        updateUser.setUsername(upUser.getUsername());
-        updateUser.setSurname(upUser.getSurname());
-        updateUser.setEmail(upUser.getEmail());
-        updateUser.setPassword(passwordEncoder.encode(upUser.getPassword()));
-    }
-    public User show (long id) {
+ @Transactional
+ public void edit(User user, Integer id, String role) {
+  Set<Role> rolesToChange;
+  if (role.equals("ROLE_ADMIN")) {
+   rolesToChange = Set.of(new Role(1, "ROLE_USER"),new Role(2, "ROLE_ADMIN"));
+  } else {
+   rolesToChange = Set.of(new Role(1, "ROLE_USER"));
+  }
 
-        return userRepository.getById(id);
-    }
-    @Transactional
-    public void delete (long id) {
-        userRepository.deleteById(id);
-    }
-    @PostConstruct
-    public User createTestAdmin() {
-        if (userRepository.findByUsername("admin") == null) {
-            User user = new User("admin", "test", "test@mail.com");
-            user.setId(1);
-            user.setPassword(passwordEncoder.encode("admin"));
-            user.setRoles(Collections.singleton(new Role (user.getId(), "ROLE_ADMIN")));
-            return userRepository.save(user);
-        }
-        return null;
-    }
+  User editUser = new User();
+  editUser.setName(user.getName());
+  editUser.setLastName(user.getLastName());
+  editUser.setAge(user.getAge());
+  editUser.setRoles(rolesToChange);
+  editUser.setId(id);
+  editUser.setPassword(passwordEncoder.encode(user.getPassword()));
+  userRepository.save(editUser);
+ }
 
+ public void removeUserById(Integer id) {
+  userRepository.deleteById(id);
+ }
 
+ public User getUserById(Integer id) {
+  return userRepository.getById(id);
+ }
 
+ public User findByUsername(String username) {
+  return userRepository.findByUsername(username);
+ }
+
+ @Override
+ @Transactional
+ public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+  User user = findByUsername(username);
+  if (user == null) {
+   throw new UsernameNotFoundException(String.format("User '%s' not found", username));
+  }
+  return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(),
+          mapRolesToAuthorities(user.getRoles()));
+ }
+
+ private Collection<? extends GrantedAuthority> mapRolesToAuthorities(Collection<Role> roles) {
+  return roles.stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList());
+ }
+
+ //Добавление пользователя для теста функционала
+ @PostConstruct
+ public User createTestAdmin() {
+  if (userRepository.findByUsername("admin") == null) {
+   User user = new User("admin", "adminov", 22);
+   user.setId(1);
+   user.setPassword(passwordEncoder.encode("admin"));
+   user.addRole(new Role(user.getId(), "ROLE_ADMIN"));
+   user.addRole(new Role(user.getId(), "ROLE_USER"));
+   return userRepository.save(user);
+  }
+  return null;
+ }
 }
